Ramen-rose-5> Add cities section to home page
Ramen-rose-5> Add cities section to home page

1) show picture of city
2) show how many customers have gone there
3) show the number of top chefs in that franchise
4) Show twitter link of the franchise
5) Make the page responsive

--- a/index.html
+++ b/index.html
@@ -264,37 +264,93 @@
         </div>
     </div>
 </section>
-<section class="Cities-having-our-franchise">
+<section class="section-cities">
     <div class="row">
         <h2 class="heading-2">We're currently in these cities</h2>
     </div>
-    <div class="cities"></div>
-    <div class="city span-1-of-3">
-        <img src="images/Cities/islamabad.jpg">
-        <div class="city-caption">
+    <div class="row cities">
+        <div class="span-1-of-4 box city">
+            <img src="images/Cities/islamabad.jpg" alt="islamabad-franchise" class="city-image">
+            <h3>Islamabad</h3>
+            <div class="city-feature">
+                <i class="ion-ios-people icon-small"></i>
+                1000+ happy eaters
+            </div>
+            <div class="city-feature">
+                <i class="ion-star icon-small"></i>
+                1000+ top Chefs
+            </div>
+            <div class="city-feature">
+                <i class="ion-social-twitter icon-small"></i>
+                @Ramen_rose_isb
+            </div>
+            <div class="city-feature">
+                <i class="ion-android-call icon-small"></i>
+                +(92) 0555-0432168
+            </div>
         </div>
-    </div>
-    <div class="city span-1-of-3">
-        <img src="images/Cities/lahore.jpg">
-        <div class="city-caption">
-        </div>
-    </div>
-    <div class="city span-1-of-3">
-        <img src="images/Cities/karachi.jpg">
-        <div class="city-caption">
-        </div>
-    </div>
-    <!--    Islamabad-->
-    <!--    1000+ top Chefs-->
-    <!--    @Ramen_rose_isb-->
 
-    <!--    Lahore-->
-    <!--    1500+ top Chefs-->
-    <!--    @Ramen_rose_lhr-->
-
-    <!--    Karachi-->
-    <!--    2000+ top Chefs-->
-    <!--    @Ramen_rose_khi-->
+        <div class="span-1-of-4 box city">
+            <img src="images/Cities/lahore.jpg" alt="lahore-franchise" class="city-image">
+            <h3>Lahore</h3>
+            <div class="city-feature">
+                <i class="ion-ios-people icon-small"></i>
+                1900+ happy eaters
+            </div>
+            <div class="city-feature">
+                <i class="ion-star icon-small"></i>
+                1800+ top Chefs
+            </div>
+            <div class="city-feature">
+                <i class="ion-social-twitter icon-small"></i>
+                @Ramen_rose_lhr
+            </div>
+            <div class="city-feature">
+                <i class="ion-android-call icon-small"></i>
+                +(92) 0555-0434828
+            </div>
+        </div>
+        <div class="span-1-of-4 box city">
+            <img src="images/Cities/karachi.jpg" alt="karachi-franchise" class="city-image">
+            <h3>Karachi</h3>
+            <div class="city-feature">
+                <i class="ion-ios-people icon-small"></i>
+                1940+ happy eaters
+            </div>
+            <div class="city-feature">
+                <i class="ion-star icon-small"></i>
+                1040+ top Chefs
+            </div>
+            <div class="city-feature">
+                <i class="ion-social-twitter icon-small"></i>
+                @Ramen_rose_kch
+            </div>
+            <div class="city-feature">
+                <i class="ion-android-call icon-small"></i>
+                +(92) 0555-0875168
+            </div>
+        </div>
+        <div class="span-1-of-4 box city">
+            <img src="images/Cities/quetta.jpg" alt="quetta-franchise" class="city-image">
+            <h3>Quetta</h3>
+            <div class="city-feature">
+                <i class="ion-ios-people icon-small"></i>
+                900+ happy eaters
+            </div>
+            <div class="city-feature">
+                <i class="ion-star icon-small"></i>
+                200+ top Chefs
+            </div>
+            <div class="city-feature">
+                <i class="ion-social-twitter icon-small"></i>
+                @Ramen_rose_qut
+            </div>
+            <div class="city-feature">
+                <i class="ion-android-call icon-small"></i>
+                +(92) 0555-0432654
+            </div>
+        </div>
+    </div>
 </section>
 </body>
 <script src="jquery/jquery-3.4.1.min.js"></script>
