ramen-rose-5> Convert twitter handles into links
ramen-rose-5> Convert twitter handles into links

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <header class="header">
     <nav class="navbar">
         <div class="row ">
-            <a class="brand" href="#">
+            <div class="brand" href="#">
                 <img src="images/logo/logo3.png" alt="Ramen-Rose Logo" class="logo">
                 <span class="brand-name"> Ramen Rose</span>
-            </a>
+            </div>
             <ul class="menu">
                 <li class="btn-menu"><a href="html/menu.html">Menu</a></li>
                 <li class="btn-book-table"><a href="html/book-table.html">Book Table</a></li>
@@ -282,7 +282,7 @@
             </div>
             <div class="city-feature">
                 <i class="ion-social-twitter icon-small"></i>
-                @Ramen_rose_isb
+                  <a href="#"> @Ramen_rose_isb</a>
             </div>
             <div class="city-feature">
                 <i class="ion-android-call icon-small"></i>
@@ -303,7 +303,7 @@
             </div>
             <div class="city-feature">
                 <i class="ion-social-twitter icon-small"></i>
-                @Ramen_rose_lhr
+                <a href="#"> @Ramen_rose_lhr</a>
             </div>
             <div class="city-feature">
                 <i class="ion-android-call icon-small"></i>
@@ -323,7 +323,7 @@
             </div>
             <div class="city-feature">
                 <i class="ion-social-twitter icon-small"></i>
-                @Ramen_rose_kch
+                <a href="#">  @Ramen_rose_kch</a>
             </div>
             <div class="city-feature">
                 <i class="ion-android-call icon-small"></i>
@@ -343,7 +343,7 @@
             </div>
             <div class="city-feature">
                 <i class="ion-social-twitter icon-small"></i>
-                @Ramen_rose_qut
+                <a href="#">  @Ramen_rose_qut</a>
             </div>
             <div class="city-feature">
                 <i class="ion-android-call icon-small"></i>
