Ramen-rose-5>Refactor code
Ramen-rose-5>Refactor code

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             </div>
             <div class="city-feature">
                 <i class="ion-social-twitter icon-small"></i>
-                  <a href="#"> @Ramen_rose_isb</a>
+                  <a href="#" class="link"> @Ramen_rose_isb</a>
             </div>
             <div class="city-feature">
                 <i class="ion-android-call icon-small"></i>
@@ -303,7 +303,7 @@
             </div>
             <div class="city-feature">
                 <i class="ion-social-twitter icon-small"></i>
-                <a href="#"> @Ramen_rose_lhr</a>
+                <a href="#"  class="link"> @Ramen_rose_lhr</a>
             </div>
             <div class="city-feature">
                 <i class="ion-android-call icon-small"></i>
@@ -323,7 +323,7 @@
             </div>
             <div class="city-feature">
                 <i class="ion-social-twitter icon-small"></i>
-                <a href="#">  @Ramen_rose_kch</a>
+                <a href="#"  class="link">  @Ramen_rose_kch</a>
             </div>
             <div class="city-feature">
                 <i class="ion-android-call icon-small"></i>
@@ -343,7 +343,7 @@
             </div>
             <div class="city-feature">
                 <i class="ion-social-twitter icon-small"></i>
-                <a href="#">  @Ramen_rose_qut</a>
+                <a href="#"  class="link">  @Ramen_rose_qut</a>
             </div>
             <div class="city-feature">
                 <i class="ion-android-call icon-small"></i>
